<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 Luke Klinker
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Floating Tutorial</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Example Titles -->
    <string name="simple_dialog_example">Simple Dialog Example</string>
    <string name="selection_dialog_example">Selection Dialog Example</string>
    <string name="feature_tutorial_example">Feature Walk-through Example</string>
    <string name="rate_it_example">Rate It Example</string>
    <string name="iap_flow_example">Pulse SMS Purchase Flow Example</string>
    <string name="bottom_sheet_example">Bottom Sheet Example</string>

    <!-- Simple Dialog Example -->
    <string name="simple_dialog_title">Here is a simple dialog</string>
    <string name="simple_dialog_summary">You could use this as a type of alert dialog, if you wanted. Longer content can go here and it will adjust to the correct size.</string>

    <!-- Selection Dialog Example -->
    <string name="selection_dialog_title">Select an item: </string>
    <string name="selection_dialog_summary">The result of this selection can be returned as the Activity result.</string>
    <string name="item_one">Item one</string>
    <string name="item_two">Item two</string>

    <!-- Rate-it Dialog Example -->
    <string name="rate_it_page_1_title">Loving the app?</string>
    <string name="rate_it_page_1_summary">Let us know how we are doing!</string>
    <string name="rate_it_page_2_good_title">Consider giving us a Play Store review!</string>
    <string name="rate_it_page_2_good_summary">We knew you would love it. Every review counts and helps us improve the app!</string>
    <string name="rate_it_page_2_bad_title">We would love to hear what we can improve!</string>
    <string name="rate_it_page_2_bad_summary">Not loving the app yet? Please get in touch to let us know how to make it better!</string>
    <string name="rate_it">Rate It!</string>
    <string name="send_email">Send Email</string>
    <string name="no_thanks">No thanks</string>

    <!-- Feature Walk-through Example -->
    <string name="feature_1_title">My awesome first feature</string>
    <string name="feature_1_summary">Tell the users why this feature is great! You could put a picture
        of the feature above, or some kind of graphic, or an animation. Everything is up to you.</string>
    <string name="feature_2_title">The pretty cool second feature</string>
    <string name="feature_2_summary">Hey, look what I can do for you. You need this app!</string>
    <string name="feature_3_title">One more, for good measure</string>
    <string name="feature_3_summary">You can change the background color of the tutorial, however you like.</string>

    <!-- Pulse SMS Purchase Flow Example -->
    <string name="beautiful_powerful_instant">Beautiful, powerful, instant.</string>
    <string name="optimized_for_all_your_devices">Pulse is optimized for <b>all</b> your devices.
        Send texts from the web, a desktop computer, your tablet, a watch, and even your TV.</string>
    <string name="true_imessage_competitor">The first <b>true</b> iMessage competitor for Android.</string>
    <string name="try_it">Try it!</string>
    <string name="seven_days_free">7 days free!</string>
    <string name="competition_cant_beat">The competition can\'t touch our prices, speed, or service -
        <b>take 7 days</b> to find out for yourself!</string>
    <string name="select_a_trial_below">Select one of the options below to start your <b>free trial</b>.</string>
    <string name="charged_after_trial">Charged after the trial:</string>
    <string name="monthly_purchase">$0.99 /\nmonth</string>
    <string name="three_month_purchase">$1.99 /\n3 month</string>
    <string name="yearly_purchase">$5.99 /\nyear</string>
    <string name="billed_immediately">This is billed immediately.</string>
    <string name="lifetime_purchase">$10.99 - Lifetime Membership</string>
    <string name="lifetime_purchase_summary">Pay once, and never again!</string>

</resources>
