<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 Luke Klinker
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beautiful_powerful_instant"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/optimized_for_all_your_devices"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_android"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_android"
            android:tint="@color/tutorial_light_background_indicator" />

        <ImageView
            android:id="@+id/icon_phone"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_phone"
            android:tint="@color/tutorial_light_background_indicator" />

        <ImageView
            android:id="@+id/icon_computer"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_computer"
            android:tint="@color/tutorial_light_background_indicator" />

        <ImageView
            android:id="@+id/icon_tablet"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_tablet"
            android:tint="@color/tutorial_light_background_indicator" />

        <ImageView
            android:id="@+id/icon_watch"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_watch"
            android:tint="@color/tutorial_light_background_indicator" />

    </LinearLayout>

    <TextView
        android:id="@+id/bottom_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:text="@string/true_imessage_competitor"
        android:textColor="@color/tutorial_light_background_indicator"
        android:textSize="16sp" />

</LinearLayout>